--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
   <div id='app'></div>
+
   <script src="/static/vue.js"></script>
   <script src="/static/vue-router.js"></script>
   <script src="/static/vuex.js"></script>
   <script src="/static/vue-composition-api.js"></script>
+  <script src="/static/vue-awesome.js"></script>
 </body>
 </html>
