--- a/static/index.html
+++ b/static/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>vue-demo</title>
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/static/icon.css">
-<link href="/static/app.fb0597e9070f4827e0bf.css" rel="stylesheet"></head>
-<body>
-  <div id='app'></div>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>vue-demo</title>
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/static/css/icon.css" />
+  <link href="/static/css/vendors.css" rel="stylesheet"><link href="/static/css/main.css" rel="stylesheet"></head>
+  <body>
+    <div id="app"></div>
 
-  <script src="/static/vue.js"></script>
-  <script src="/static/vue-router.js"></script>
-  <script src="/static/vuex.js"></script>
-<script type="text/javascript" src="/static/app.fb0597e9070f4827e0bf.js"></script></body>
+    <script src="/static/js/vue.js"></script>
+    <script src="/static/js/vue-router.js"></script>
+    <script src="/static/js/vuex.js"></script>
+  <script type="text/javascript" src="/static/js/runtime~main.b88a7be46ae2486f3fa4.js"></script><script type="text/javascript" src="/static/js/vendors.759decaf553b19712faf.js"></script><script type="text/javascript" src="/static/js/main.feacbc8a36e5978599d5.js"></script></body>
 </html>
