--- a/src/template.html
+++ b/src/template.html
@@ -10,12 +10,12 @@
     <title>vue-demo</title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/static/css/icon.css" />
-  <link href="/static/css/vendors.css" rel="stylesheet"><link href="/static/css/main.css" rel="stylesheet"></head>
+  </head>
   <body>
     <div id="app"></div>
 
     <script src="/static/js/vue.js"></script>
     <script src="/static/js/vue-router.js"></script>
     <script src="/static/js/vuex.js"></script>
-  <script type="text/javascript" src="/static/js/runtime~main.b88a7be46ae2486f3fa4.js"></script><script type="text/javascript" src="/static/js/vendors.759decaf553b19712faf.js"></script><script type="text/javascript" src="/static/js/main.feacbc8a36e5978599d5.js"></script></body>
+  </body>
 </html>
